<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5658160199002627/1396870992</string>
    <string name="banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-5658160199002627~8920137792</string>

    <string name="app_name">Perfect Egg Timer</string>
    <string name="Egg_Timer_Alert">Egg Timer Alert!</string>
    <string name="Your_egg_is_boiled_and_ready_to_enjoy">Perfect Egg Ready. Take snap to share</string>
    <string name="Stop">Stop</string>
    <string name="Again">Again?</string>
    <string name="Go">Go!</string>
    <string name="slide_to_set_egg_boil_time">Slide to set egg boil time</string>
    <string name="go">Go!</string>
    <string name="about">About</string>
    <string name="photo">photo</string>
    <string name="time_s_up">Time\'s up!</string>
    <string name="you_ve_just_cooked_your_perfect_egg_take_a_snap_and_share_it_with_your_friends_using_perfectegg">You\'ve just cooked your perfect egg. Take a snap and share it with your friends using #PerfectEgg</string>
    <string name="snap_your_egg_and_share">Snap your egg and share!</string>
    <string name="the_perfect_egg_timer">The Perfect Egg Timer</string>
    <string name="About_Egg_Heading">We love eggs!</string>
    <string name="About_Egg_Heading2">Here\'s how to use the Perfect Egg Timer to boil your perfect egg in basic and advanced mode...</string>
    <string name="About_egg_cook_general_instructions">Bring the water up to a boil, then lower (but not too much) to a rapid simmer. Add the eggs to the pot, and then click GO! to start timing.</string>
    <string name="About_egg_cook_basic_instructions">If you\'re just cooking one or two eggs, five minutes is perfect for a runny yolk, or cook as long as seven minutes for a more firmly set, but still spoonable, yolk.</string>
    <string name="About_egg_cook_advanced_instructions">It turns out the perfect boiled egg timer depends on many factors like whether your egg has been in the fridge, it\'s size and even the altitude of your cooking location. Now we don\'t expect you to actually know your altitude, but the Perfect Egg Timer will if you allow it access. Boiling time can vary significantly due to your altitude, so use our advanced \'Let us calculate egg time\' and we\'ll put our advanced algorithm to work!</string>
    <string name="spread_the_word">We\'ve worked hard to bring you the Perfect Egg Timer. Our happy app downloaders are extremely loyal and we\'d like you to join their enthusiasm by telling your friends and family about this wonderful app. It\'s only available on Android right now, so if you know others with an Android phone and a love of boiled eggs and a bit of fun, please take a moment to share the Perfect Egg Timer now.</string>
    <string name="please_share_us">Please share us</string>
    <string name="back_to_timer">Back to timer</string>
    <string name="share">share</string>


        <string name="action_deep_link" translatable="false">
        com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION
    </string>

    <string name="invite">Send invitations!</string>
    <string name="welcome" translatable="false">App Invite\nQuickstart</string>
    <string name="referrer_hint" translatable="false">Deep link not provided</string>
    <string name="invitation_id_default" translatable="false">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>

    <string name="invitation_title">Send Egg Timer Invite</string>
    <string name="invitation_message">Get this Perfect Egg Timer for your phone</string>
    <string name="invitation_deep_link" translatable="false">https://play.google.com/store/apps/details?id=org.reallysimpleapps.eggtimer</string>
    <string name="invitation_custom_image" translatable="false">http://www.reallysimpleapps.org/wp-content/uploads/2016/03/hi-res-512-x-512-2.png</string>
    <string name="invitation_cta" translatable="false">Install!</string>
    <string name="invitation_subject">Try this great Egg Timer app!</string>

    <string name="deep_link_fmt" formatted="false" translatable="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false" translatable="false">Invitation ID: %s</string>

    <string name="sent_invitations_fmt" formatted="false" translatable="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>

    <string name="google_play_services_error" translatable="false">Google Play Services Error</string>
    <string name="custom_invite" translatable="false">Custom Invite</string>

    <string name="About_Perfect_Egg_Timer">About Perfect Egg Timer</string>
    <string name="deep_link_default" translatable="false">https://play.google.com/store/apps/details?id=org.reallysimpleapps.eggtimer</string>
    <string name="use_our_algorithm_to_calculate_the_perfect_boiling_time_for_your_egg" translatable="false">Use our algorithm to calculate your perfect egg boil time</string>
    <string name="select_from_the_following">Select from the following</string>
    <string name="egg_size">Egg size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="egg_temp">Egg temp</string>
    <string name="room">Room</string>
    <string name="fridge">Fridge</string>
    <string name="altitude">Altitude</string>
    <string name="i_d_like">I\'d like</string>
    <string name="hard">Hard   </string>
    <string name="soft">Soft</string>
    <string name="recommended_time">Recommended:</string>
    <string name="time">Time</string>
    <string name="accept_recommended_time">Accept &amp; GO!</string>
    <string name="let_us_calculate_for_you"><u>Let us calculate egg time</u></string>
    <string name="location">Location</string>

</resources>
